RESOLVED FIXED47242
[chromium] DRT assertion w/accel 2D canvas in PlatformContextSkia
https://bugs.webkit.org/show_bug.cgi?id=47242
Summary [chromium] DRT assertion w/accel 2D canvas in PlatformContextSkia
Kenneth Russell
Reported 2010-10-05 19:27:47 PDT
fast/canvas/canvas-putImageData.html is failing when run in DRT with --enable-accelerated-compositing --enable-accelerated-2d-canvas due to the following assertion failure: Program received signal SIGSEGV, Segmentation fault. 0x0000000000c331bb in WebCore::PlatformContextSkia::markDirtyRect (this=0x7fffec567900, rect=...) at WebCore/platform/graphics/skia/PlatformContextSkia.cpp:814 814 ASSERT_NOT_REACHED(); (gdb) where #0 0x0000000000c331bb in WebCore::PlatformContextSkia::markDirtyRect (this=0x7fffec567900, rect=...) at WebCore/platform/graphics/skia/PlatformContextSkia.cpp:814 #1 0x0000000000c2aa23 in WebCore::GraphicsContext::markDirtyRect (this=0x7ffff7e92560, rect=...) at WebCore/platform/graphics/skia/GraphicsContextSkia.cpp:1257 #2 0x00000000005f252b in WebCore::CanvasRenderingContext2D::didDraw (this=0x7fffec510420, r=..., options=0) at WebCore/html/canvas/CanvasRenderingContext2D.cpp:1495 #3 0x00000000005f2fb3 in WebCore::CanvasRenderingContext2D::putImageData (this=0x7fffec510420, data=0x7fffec5c85c0, dx=0, dy=0, dirtyX=0, dirtyY=0, dirtyWidth=100, dirtyHeight=100, ec=@0x7fffffffbeac) at WebCore/html/canvas/CanvasRenderingContext2D.cpp:1626 #4 0x00000000005f2bf5 in WebCore::CanvasRenderingContext2D::putImageData (this=0x7fffec510420, data=0x7fffec5c85c0, dx=0, dy=0, ec=@0x7fffffffbeac) at WebCore/html/canvas/CanvasRenderingContext2D.cpp:1585 ... m_backingStoreState is None at this point.
Attachments
Patch (1.53 KB, patch)
2010-10-05 20:20 PDT, James Robinson
kbr: review+
James Robinson
Comment 1 2010-10-05 20:03:10 PDT
The issue is we aren't calling prepareForSoftwareDraw() before doing the putImageData. Patch incoming.
James Robinson
Comment 2 2010-10-05 20:20:52 PDT
Stephen White
Comment 3 2010-10-06 10:28:32 PDT
(In reply to comment #2) > Created an attachment (id=69879) [details] > Patch Looks good, but I'm not a reviewer.
Kenneth Russell
Comment 4 2010-10-06 10:39:13 PDT
Comment on attachment 69879 [details] Patch Looks good to me.
James Robinson
Comment 5 2010-10-06 13:22:06 PDT
Note You need to log in before you can comment on or make changes to this bug.