2010-10-05  James Robinson  <jamesr@chromium.org>

Reviewed by Kenneth Russell.

        [chromium] DRT assertion w/accel 2D canvas in PlatformContextSkia
        https://bugs.webkit.org/show_bug.cgi?id=47242

        Call PlatformContextSkia::prepareForSoftwareDraw before doing putImageData
        since that call mutates the software backing store.

        Test: fast/canvas/canvas-putImageData.html

        * platform/graphics/skia/ImageBufferSkia.cpp:
        (WebCore::ImageBuffer::putUnmultipliedImageData):

git-svn-id: svn://svn.chromium.org/blink/trunk@69227 bbb929c8-8fbe-4397-9dbb-9b2b20218538