third_party/WebKit/WebCore/platform/graphics/skia/ImageBufferSkia.cpp
@@ -291,6 +291,7 @@ void putImageData(ImageData*& source, const IntRect& sourceRect, const IntPoint&
 
 void ImageBuffer::putUnmultipliedImageData(ImageData* source, const IntRect& sourceRect, const IntPoint& destPoint)
 {
+    context()->platformContext()->prepareForSoftwareDraw();
     putImageData<Unmultiplied>(source, sourceRect, destPoint, *context()->platformContext()->bitmap(), m_size);
 }
 
